--- a/.gitignore
+++ b/.gitignore
@@ -182,8 +182,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # idea folder, uncomment if you don't need it
- .idea
-dataset_csv
-dataset_folders
-dataset_idx
+ .idea/
+dataset_csv/
+dataset_folders/
+dataset_idx/
 *.csv
